--- a/src/main/resources/com/project/busfinder/GUI/main.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,33 +13,50 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.MainController">
    <children>
-      <AnchorPane prefHeight="483.0" prefWidth="600.0">
+      <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <VBox fx:id="sidePanel" minHeight="400.0" minWidth="190.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" visible="false">
+            <VBox fx:id="sidePanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" visible="false">
                <children>
-                  <GridPane prefHeight="448.0" prefWidth="190.0">
+                  <GridPane fx:id="sidePanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="190.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" text="button" />
+                        <Button alignment="CENTER" mnemonicParsing="false" text="button" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <TextField fx:id="CompanyTextField" alignment="CENTER" promptText="Bus Finder Inc." GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                </children></VBox>
-            <Button fx:id="toggleButton" layoutX="300.0" layoutY="200.0" onAction="#toggleSidePanel">
-               <graphic>
-                  <ImageView fx:id="buttonImage" fitHeight="50.0" fitWidth="50.0">
-                     <image>
-                        <Image preserveRatio="true" smooth="true" url="@images/arrow3.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <VBox fx:id="buttonPanel" layoutX="190.0" layoutY="6.0" prefHeight="400.0" prefWidth="100.0">
+               <children>
+                  <GridPane fx:id="buttonPanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="100.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button fx:id="toggleButton" onAction="#toggleSidePanel" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <graphic>
+                              <ImageView fx:id="buttonImage" fitHeight="50.0" fitWidth="50.0">
+                                 <image>
+                                    <Image preserveRatio="true" smooth="true" url="@images/arrow3.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
    </children>
