--- a/src/main/resources/com/project/busfinder/GUI/startingSidePanel.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/startingSidePanel.fxml
@@ -5,8 +5,11 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane fx:id="sidePanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="190.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22">
+<VBox fx:id="sidePanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.SidePanelController">
+    <children>
+<GridPane fx:id="sidePanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="190.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -16,7 +19,9 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="69.0" prefWidth="191.0" stylesheets="@style.css" text="button" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+        <Button fx:id="trackBusButton" alignment="CENTER" mnemonicParsing="false" prefHeight="69.0" prefWidth="191.0" stylesheets="@style.css" text="button" GridPane.halignment="CENTER" GridPane.valignment="CENTER" onAction="#moveToRoutesPage"/>
         <TextField fx:id="CompanyTextField" alignment="CENTER" promptText="Bus Finder Inc." GridPane.rowIndex="2" />
     </children>
 </GridPane>
+    </children>
+</VBox>
