--- a/src/main/resources/com/project/busfinder/GUI/main.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/main.fxml
@@ -1,50 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import com.sothawo.mapjfx.MapView?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.MainController">
-   <children>
-      <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0">
-         <children>
-            <VBox fx:id="sidePanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" visible="false">
-               <children>
-
-               </children></VBox>
-            <VBox fx:id="buttonPanel" layoutX="190.0" layoutY="6.0" prefHeight="400.0" prefWidth="100.0">
-               <children>
-                  <GridPane fx:id="buttonPanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="100.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Button fx:id="toggleButton" onAction="#toggleSidePanel" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                           <graphic>
-                              <ImageView fx:id="buttonImage" fitHeight="50.0" fitWidth="50.0">
-                                 <image>
+<AnchorPane fx:id="anchorPane" prefHeight="968.0" prefWidth="1134.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.MainController">
+    <children>
+        <MapView fx:id="mapView" focusTraversable="true" zoom="6.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <VBox fx:id="sidePanel" layoutX="20" layoutY="20" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" visible="false">
+            <!-- VBox contents go here -->
+        </VBox>
+        <VBox fx:id="buttonPanel" layoutX="220.0" layoutY="20.0" prefHeight="400.0" prefWidth="100.0">
+            <GridPane fx:id="buttonPanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="100.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <Button fx:id="toggleButton" onAction="#toggleSidePanel" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                        <graphic>
+                            <ImageView fx:id="buttonImage" fitHeight="50.0" fitWidth="50.0">
+                                <image>
                                     <Image preserveRatio="true" smooth="true" url="@images/arrow3.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                     </children>
-                  </GridPane>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-   </children>
-</StackPane>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                </children>
+            </GridPane>
+        </VBox>
+    </children>
+</AnchorPane>
