added various functions and features.
mapping over night, where the time column crosses 00:00 is handled. searching for specific bus from sidepanel locks onto bus. user can click on bus for bus details. when attempting to render buses from button click, new buses are only rendered when all background tasks are complete, meaning the user can still look around the map, and the map stays active, improving UX. fixed code in processXML, now correctly writes the next day. Next steps are: get live routes to the same stage as simulated routes. create final side panel for route information.

--- a/src/main/resources/com/project/busfinder/GUI/main.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.sothawo.mapjfx.MapView?>
+<?import com.sothawo.mapjfx.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -28,6 +29,9 @@
                                 <image>
                                     <Image preserveRatio="true" smooth="true" url="@images/arrow3.png" />
                                 </image>
+                        <cursor>
+                           <Cursor fx:constant="HAND" />
+                        </cursor>
                             </ImageView>
                         </graphic>
                     </Button>
