--- a/src/main/resources/com/project/busfinder/GUI/routeDetailsPanel.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/routeDetailsPanel.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="sidepanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" visible="true" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.stopsPanelController">
+<VBox fx:id="sidepanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #FFC107;" visible="true" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.stopsPanelController">
     <GridPane fx:id="trackBusGridpane" alignment="CENTER" prefHeight="448.0" prefWidth="190.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -14,9 +14,8 @@
         </rowConstraints>
         <children>
             <Button fx:id="returnButton" mnemonicParsing="false" onAction="#moveToPreviousPage" text="&lt;-" GridPane.halignment="LEFT" />
-            <Button fx:id="resetButton" mnemonicParsing="false" onAction="#reloadRouteDetailsPage" text="reset" GridPane.halignment="RIGHT" />
          <ListView fx:id="stopListView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <ProgressIndicator fx:id="loadingIndicator" prefHeight="27.0" prefWidth="21.0" visible="false" GridPane.rowIndex="1" GridPane.halignment="CENTER"/>
+            <ProgressIndicator fx:id="loadingIndicator" prefHeight="27.0" prefWidth="21.0" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
         </children>
     </GridPane>
 </VBox>
