--- a/src/main/resources/com/project/busfinder/GUI/startingSidePanel.fxml
+++ b/src/main/resources/com/project/busfinder/GUI/startingSidePanel.fxml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox fx:id="sidePanel" layoutY="12.0" prefHeight="400.0" prefWidth="190.0" style="-fx-background-color: #fcba03;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.SidePanelController">
+<VBox fx:id="sidePanel" layoutY="12.0" prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #FFC107;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.busfinder.GUI.SidePanelController">
     <children>
-<GridPane fx:id="sidePanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="190.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="sidePanelGridPane" alignment="CENTER" prefHeight="448.0" prefWidth="250.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
     </rowConstraints>
     <children>
-        <Button fx:id="trackBusButton" alignment="CENTER" mnemonicParsing="false" prefHeight="69.0" prefWidth="191.0" stylesheets="@style.css" text="button" GridPane.halignment="CENTER" GridPane.valignment="CENTER" onAction="#moveToRoutesPage"/>
-        <TextField fx:id="CompanyTextField" alignment="CENTER" promptText="Bus Finder Inc." GridPane.rowIndex="2" />
+        <Button fx:id="trackBusButton" alignment="CENTER" mnemonicParsing="false" onAction="#moveToRoutesPage" prefHeight="69.0" prefWidth="191.0" stylesheets="@style.css" text="Search for buses" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
     </children>
 </GridPane>
     </children>
